# school_testing

./: CONTRIBUTING.md  README.MD  commands.md  info.md  pyproject.toml  setup.cfg
env_folder/: readme.txt
env_folder/development/: readme.txt
env_folder/production/: readme.txt
raw_model/: readme.txt  student.json  subject.json  teacher.json
scripts/db/: clear_all_tables.py
scripts/items/student/: student_create.py  student_delete.py  student_get.py  student_getItems.py  student_update.py
scripts/items/subject/: subject_create.py  (+4 more)
scripts/user/: const.py  student_create.py  student_delete.py  student_get.py  student_getItems.py  student_update.py  user_login.py  user_register.py
scripts/user_create/: student_create.py  student_delete.py  student_get.py  student_getItems.py  student_ids.json  student_update.py  students_update.json  tokens.json  user_login.py  user_register.py
src/: config.py  const.py  data_func.py  db_client.py  http_func.py
src/api_entity/: api_func.py  api_path.py  const.py  factory.py  model.py  schema_func.py
tests/: CRUD_items.md  config.py  conftest.py  login.py  scenario_for_items.md
tests/scenario/: test_general_scenario.py  test_rule_one_major_subject.py  test_rule_one_teacher.py  test_student_auth.py  test_subject_auth.py  test_teacher_auth.py
tests/student/: test_crud_student.py  test_crud_subject.py  test_limit_student.py  test_negative_student.py  test_rule_unique_email_for_student.py
tests/subject/: test_crud_subject.py
tests/teacher/: test_crud_teacher.py  test_rule_unique_email_for_teacher.py  test_teacher.py
(+44 files in other folders)
