[tool.poetry]
name = "school_testing"
version = "0.1.0"
description = ""
authors = ["boyarkina <bo_dary@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
requests = "^2.28.2"
yarl = "^1.8.2"
StrEnum = "^0.4.10"
pydantic-factories = "^1.17.2"
python-dotenv = "^1.0.0"
dpath = "^2.1.5"
#psycopg2 = "^2.9.6" # для Windows
psycopg2-binary = "^2.9.6" # для Linux
email-validator = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
